--- a/veteran-ai-spark/index.html
+++ b/veteran-ai-spark/index.html
@@ -6,18 +6,18 @@
     <title>Veterans Benefits AI</title>
     <meta name="description" content="An AI assistant that helps navigate U.S. Veterans benefits using authoritative sources." />
     <meta name="author" content="Veterans Benefits AI" />
-    <link rel="icon" href="/placeholder.svg" type="image/svg+xml" />
-    <link rel="shortcut icon" href="/placeholder.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/placeholder.svg" />
+    <link rel="icon" href="/logo.svg?v=2" type="image/svg+xml" />
+    <link rel="shortcut icon" href="/logo.svg?v=2" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/logo.svg?v=2" />
     <meta name="theme-color" content="#0b0b0f" />
 
     <meta property="og:title" content="Veterans Benefits AI" />
     <meta property="og:description" content="An AI assistant that helps navigate U.S. Veterans benefits using authoritative sources." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="https://veteransbenefits.ai/logo.svg?v=2" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="https://veteransbenefits.ai/logo.svg?v=2" />
   </head>
 
   <body>
