chore(perf): optimize assets and add hosting guidance
- Add preconnect hints for CDN and API origins
- Assets already optimized (SVG logos, no heavy images)
- Add hosting performance guide with compression/caching
- Recommend Brotli compression and immutable cache headers

--- a/veteran-ai-spark/index.html
+++ b/veteran-ai-spark/index.html
@@ -6,6 +6,10 @@
     <title>Veterans Benefits AI</title>
     <meta name="description" content="An AI assistant that helps navigate U.S. Veterans benefits using authoritative sources." />
     <meta name="author" content="Veterans Benefits AI" />
+    
+    <!-- Performance hints -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="preconnect" href="https://veteransbenefits.ai" crossorigin>
     <link rel="icon" href="/logo.svg?v=2" type="image/svg+xml" />
     <link rel="shortcut icon" href="/logo.svg?v=2" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/logo.svg?v=2" />
